# gpt_bot_rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  models.rs
