[package]
name = "gpt_bot_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# 基础依赖
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = "0.4.26"

# Telegram Bot 相关
teloxide = { version = "0.13.0", features = ["macros"] }

# HTTP 客户端
reqwest = { version = "0.12.12", features = ["json", "multipart"] }

# 数据库 - SQLx
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }

[features]
default = ["sqlite"]
sqlite = []
postgres = []

# 优化编译
[profile.release]
opt-level = 3
lto = true
